--- a/src/main/resources/static/html/market_board.html
+++ b/src/main/resources/static/html/market_board.html
@@ -85,7 +85,7 @@
                         <span class="board_name_text_inner">장터게시판</span>
                     </div>
                     <div class="write">
-                        <a href="writing_page.html" style="height:24px  "><span class="material-icons">edit</span></a>
+                        <a href="/html/write.html" style="height:24px  "><span class="material-icons">edit</span></a>
                     </div>
                 </div>
                 <div class="board_content_list">
