--- a/src/main/resources/static/html/register.html
+++ b/src/main/resources/static/html/register.html
@@ -9,7 +9,7 @@
   <title>회원가입</title>
 </head>
 <body>
-<form method="post" action="register_sec.html" id="register">
+<form method="post" action="/html/agree_policy.html" id="register">
   <div class="wrap_content">
     <div class="text">
       <h2 class="main">Extend 회원가입</h2>
@@ -67,7 +67,7 @@
       <input type="text" name="campus_name" maxlength="20" placeholder="학교 이름 검색" class="search" id = "search">
       </div>
     </div>
-    <input type="submit" class="confirm" value="다음" onclick="loaction.href='./agree_policy.html'"/>
+    <input type="submit" class="confirm" value="다음" onclick="loaction.href='/html/agree_policy'"/>
   </div>
 </form>
 </body>
