--- a/src/main/resources/static/html/schedule.html
+++ b/src/main/resources/static/html/schedule.html
@@ -20,7 +20,6 @@
   <title>Document</title>
 </head>
 <body>
-  <body>
   <header>
         <div class="inner">
             <ul class="main-menu">
@@ -262,7 +261,7 @@
     </div>
   </div>
   <input type="button" value="+ 새 수업 추가" class="custom_button" id="custom_button">
-  <form action="asdf.jsp" id="customsubjects" style="display:none;">
+  <form action="#" id="customsubjects" style="display:none;">
     <input type="hidden" name="id" value>
     <a title="닫기" class="close" id="xbutton">✖</a>
     <div class="title">새 수업 추가</div>
@@ -360,4 +359,5 @@
     </div>
   </form>
 </body>
+
 </html>
