--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/mainpage.css">
     <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
     <!-- open graph -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Extend" />
@@ -35,7 +34,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollToPlugin.min.js" integrity="sha512-tQFq+nb/TSS648SDzWbSj0A67t4I1PFzR0U6Oi/yEYFyUbAIwg74SOCbr7t2X1Rn+iln7sYwfh8y+z7p0gddOw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script defer src="/js/main.js"></script>
+    <script defer src="/js/calendar.js"></script>
 </head>
 <body>
     <!--여기에 헤더 삽입-->
@@ -163,7 +162,7 @@
                 <div class="boardblock">
                     <div class="board_base">
                         <div class="board_header">
-                            <div class="title" id="school_announcement">
+                            <div class="title">
                                 자유게시판
                             </div>
                             <a href="board/free_board.html" class="more">
@@ -208,7 +207,7 @@
                 <div class="boardblock">
                     <div class="board_base">
                         <div class="board_header">
-                            <div class="title" id="school_announcement">
+                            <div class="title">
                                 질문, 답변게시판
                             </div>
                             <a href="board/qna_board.html" class="more">
@@ -253,7 +252,7 @@
                 <div class="boardblock">
                     <div class="board_base">
                         <div class="board_header">
-                            <div class="title" id="school_announcement">
+                            <div class="title">
                                 장터게시판
                             </div>
                             <a href="board/market_board.html" class="more">
