--- a/src/main/resources/static/html/writing/write.html
+++ b/src/main/resources/static/html/writing/write.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extend</title>
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="/css/board_write.css">
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <!--Google Api-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,6 @@
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined"
           rel="stylesheet">          
-    <script defer src="/js/calendar.js"></script>
     <script defer src="/js/header.js"></script>
     <script defer src="/js/write.js"></script>
 </head>
@@ -67,3 +66,5 @@
     </div>
 </body>
 </html>
+
+
