회원가입 부분 버튼 수정 & 버튼관련 js추가

--- a/src/main/resources/static/html/register/register.html
+++ b/src/main/resources/static/html/register/register.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script defer src="/js/schoolapi.js"></script>
+  <script defer src="/js/submit.js"></script>
   <link rel="stylesheet" href="/css/register.css"/>
   <title>회원가입</title>
 </head>
@@ -67,7 +68,7 @@
       <input type="text" name="campus_name" maxlength="20" placeholder="학교 이름 검색" class="search" id = "search">
       </div>
     </div>
-    <input type="submit" class="confirm" value="다음" onclick="loaction.href='/html/agree_policy'"/>
+    <input type="button" class="confirm" value="다음" onclick="nextpage1()"/>
   </div>
 </form>
 </body>
