--- a/src/main/resources/static/html/register/agree_policy.html
+++ b/src/main/resources/static/html/register/agree_policy.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/agree_policy.css">
     <link rel="stylesheet" href="/css/header.css">
     <script defer src="/js/allcheck.js"></script>
+    <script defer src="/js/submit.js"></script>
     <!--Google Api-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +20,7 @@
 <body>
     <div class="wrap_mainframe">
         <div class="mainframe">
-            <form method="post" action="asdf.jsp" id="agreement">
+            <form method="post" action="blank" id="agreement" name="frm">
                 <div class="content_div" id="content">
                     <div class="title">
                         약관 동의
@@ -511,8 +512,7 @@
                         <p>Extend은 국내 대학생을 위한 서비스이며, 본인 인증을 통해 만 14세 이상만 가입할 수 있습니다.</p>
                     </div>
                     <div class="buttonarea">
-                        <input type="submit" class="phoneCertified" onclick="loaction.href='./info_input.html'" value="휴대폰 인증" id="phone" disabled="">
-                        <input type="submit" class="ipinCertified" onclick="loaction.href='./info_input.html'" value="아이핀 인증" id="ipin" disabled="">
+                        <input type="button" class="phoneCertified" onClick='nextpage2()' value="다음 페이지로" id="next" disabled="">
                     </div>
                 </div>
             </form>
