첫 페이지 수정

--- a/src/main/resources/static/html/register/register.html
+++ b/src/main/resources/static/html/register/register.html
@@ -68,7 +68,7 @@
       <input type="text" name="campus_name" maxlength="20" placeholder="학교 이름 검색" class="search" id = "search">
       </div>
     </div>
-    <input type="button" class="confirm" value="다음" onclick="nextpage1()"/>
+    <input type="submit" class="confirm" value="다음"/>
   </div>
 </form>
 </body>
