회원가입 정보 입력창 학번입력칸 추가 및 js버그수정

--- a/src/main/resources/static/html/register/info_input.html
+++ b/src/main/resources/static/html/register/info_input.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/info_input.css">
     <link rel="stylesheet" href="/css/header.css">
-    <script defer src="/js/password_confirm.js"></script>
+    <script defer src="/js/password_confirm22.js"></script>
     <!--Google Api-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,6 +33,8 @@
                     <div class="other_info">
                         <span class="text">이름</span>
                         <input type="text" maxlength="10" class="input" name="name">
+                        <span class="text">학번</span>
+                        <input type="number" maxlength="10" class="input" id="hakbun" name="student_id">
                         <span class="text">이메일</span>
                         <input type="email" maxlength="255" class="input" name="email">
                     </div>
