--- a/src/main/resources/static/html/login/login.html
+++ b/src/main/resources/static/html/login/login.html
@@ -7,38 +7,40 @@
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/header.css">
-    <script defer src="/js/main.js"></script>
+    <script defer src="/js/login.js"></script>
     <title>회원로그인</title>
 </head>
 <body>
 <form method="post" action="login.jsp"> <!--임시-->
-<div class="logingrid">
-    <div class="logintitle">
-
-    </div>
-    <div class="logintext">
-        <p class="input">
-            <input type="text" name="id" maxlength="20" class="userid" placeholder="아이디"/>
-        </p>
-        <p class="input">
-            <input type="password" name="password" maxlength="20" class="userid" placeholder="비밀번호"/>
-        </p>
-    </div>
-    <div class="loginbutton">
-        <input type="submit" value="로그인" class="confirm" /> 
-    </div>
-    <div class="loginfunction">
-        <div class="loginmaintain">
-            <p><input type="checkbox">로그인 유지</p>
+<div id="wrapping">
+    <div class="logingrid">
+        <div class="logintitle">
+    
         </div>
-        <div class="idpw">
-            <a href="javascript:void(0)" class="aidpw">아이디/비밀번호 찾기</a>
+        <div class="logintext">
+            <p class="input">
+                <input type="text" name="id" maxlength="20" class="userid" placeholder="아이디"/>
+            </p>
+            <p class="input">
+                <input type="password" name="password" maxlength="20" class="userid" placeholder="비밀번호"/>
+            </p>
         </div>
-    </div>
-    <div class="register">
-        <p>
-            withrium에 처음오셨다면? <a href="../../../templates/register/register.html" class="aregister">회원가입</a>
-        </p>
+        <div class="loginbutton">
+            <input type="submit" value="로그인" class="confirm" /> 
+        </div>
+        <div class="loginfunction">
+            <div class="loginmaintain">
+                <p><input type="checkbox">로그인 유지</p>
+            </div>
+            <div class="idpw">
+                <a href="javascript:void(0)" class="aidpw">아이디/비밀번호 찾기</a>
+            </div>
+        </div>
+        <div class="register">
+            <p>
+                Extend에 처음오셨다면? <a href="../register/register.html" class="aregister">회원가입</a>
+            </p>
+        </div>
     </div>
 </div>
 </form>
