헤더 비율처리 수정(푸터는 수정예정), 비로그인 시 게시글 가림

--- a/src/main/resources/static/html/login/login.html
+++ b/src/main/resources/static/html/login/login.html
@@ -15,7 +15,7 @@
 <div id="wrapping">
     <div class="logingrid">
         <div class="logintitle">
-    
+            <h1>회원 로그인</h1>
         </div>
         <div class="logintext">
             <p class="input">
