--- a/src/main/resources/static/html/writing/write.html
+++ b/src/main/resources/static/html/writing/write.html
@@ -34,7 +34,7 @@
                         </select>
                     </div>
                     <div class="writing_title">
-                        <textarea class="title" placeholder="제목을 입력해 주세요" name="title"></textarea>
+                        <textarea class="title" placeholder="제목을 입력해 주세요" name="title" maxlength="20"></textarea>
                     </div>
                     <div id="price_contact" class="price_contact" style="display:none;">
                         <div class="price">
