--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -35,9 +35,71 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollToPlugin.min.js" integrity="sha512-tQFq+nb/TSS648SDzWbSj0A67t4I1PFzR0U6Oi/yEYFyUbAIwg74SOCbr7t2X1Rn+iln7sYwfh8y+z7p0gddOw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src="/js/calendar.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined"rel="stylesheet">
+    <script defer src="/js/header.js"></script>
 </head>
 <body>
-    <!--여기에 헤더 삽입-->
+<header>
+    <div class="inner">
+        <ul class="main-menu">
+            <div class="blank"> <!--정렬때문에 넣은 빈공간-->
+                <a href="/" class="homebutton"><span class="material-icons-outlined">home</span></a>
+            </div>
+            <ul class="wrap_category">
+                <li class="main_category_mypage">
+                    <a href="/mypage/mypage_main" class="main_category_name">
+                        마이페이지
+                    </a>
+                    <div class="sub_category_mypage hide">
+                        <div class="wrap_sub_category_mypage">
+                            <a href="/personal_info/personal_info_change" class="sub_menu_content">개인정보관리</a>
+                            <a href="javascript:void(0)" class="sub_menu_content">수강과목</a>
+                            <a href="/mypage/schedule" class="sub_menu_content">시간표</a>
+                            <a href="javascript:void(0)" class="sub_menu_content">즐겨찾기</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="main_category">
+                    <a href="/board/notice" class="main_category_name">
+                        공지사항
+                    </a>
+                </li>
+                <li class="main_category_community">
+                    <a href="/board/board_collection" class="main_category_name">
+                        커뮤니티
+                    </a>
+                    <div class="sub_category_community hide">
+                        <div class="wrap_sub_category_community">
+                            <a href="/board/free_board" class="sub_menu_content">자유게시판</a>
+                            <a href="/board/qna_board" class="sub_menu_content">질문, 답변게시판</a>
+                            <a href="/board/market_board" class="sub_menu_content">장터게시판</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <div class="wrap_othermain">
+                <div class="search">
+                    <input type="text" />
+                    <span class="material-icons">search</span>
+                </div>
+                <a href="/mypage/alert" class="notification">
+                    <span class="material-icons-outlined">notifications</span>
+                </a>
+                <li class="main_category">
+                    <a href="/mypage/mypage_main" class="main_category_name">
+                        <div class="profile">
+                            <img src="" alt="사진" class="profile_pic_alter">
+                            <div class="user_nickname">
+                                홍길동(임시이름)
+                            </div>
+                        </div>
+                    </a>
+                </li>
+            </div>
+        </ul>
+    </div>
+</header>
     <div class="wrap_mainframe">
         <div class="mainframe">
             <div class="firstdivision">
@@ -77,37 +139,10 @@
                                 더보기
                             </a>
                         </div>
-                        <div class="board_content">
-                            <div class="board_post">
-                                아 오늘 시험 망했네
-                            </div>
-                            <div class="post_time">
-                                03/24
-                            </div>
-                        </div>
-                        <div class="board_content">
-                            <div class="board_post">
-                                난 라면먹고 잔다
-                            </div>
-                            <div class="post_time">
-                                03/24
-                            </div>
-                        </div>
-                        <div class="board_content">
-                            <div class="board_post">
-                                옆방 너무 시끄러움
-                            </div>
-                            <div class="post_time">
-                                03/24
-                            </div>
-                        </div>
-                        <div class="board_content">
-                            <div class="board_post">
-                                우리 축제에 누구옴?
-                            </div>
-                            <div class="post_time">
-                                03/24
-                            </div>
+                        <div class="needlogin">
+                            <p>로그인을 해야 볼 수 있는 게시판입니다.</p>
+                            <br>
+                            <a href="/html/login.html" class="login_button">로그인</a>
                         </div>
                     </div>
                 </div>
