수정,삭제버튼 추가 및 글작성 페이지 진입시 게시판 인식기능

--- a/src/main/resources/static/html/board/free_board.html
+++ b/src/main/resources/static/html/board/free_board.html
@@ -29,7 +29,7 @@
                         <span class="board_name_text_inner">자유게시판</span>
                     </div>
                     <div class="write">
-                        <a href="/html/writing/write.html" style="height:24px  "><span class="material-icons">edit</span></a>
+                        <a href="../writing/write.html" style="height:24px  "><span class="material-icons">edit</span></a>
                     </div>
                 </div>
                 <div class="board_content_list">
