--- a/src/main/resources/static/html/reading/reading_market.html
+++ b/src/main/resources/static/html/reading/reading_market.html
@@ -37,7 +37,9 @@
                                             익명
                                         </div>
                                         <div class="report">
-                                            신고
+                                            <a href="javascript:void(0)" class="inner_button">삭제</a>
+                                            <a href="javascript:void(0)" class="inner_button">수정</a>
+                                            <a href="javascript:void(0)" class="inner_button">신고</a>
                                         </div>
                                     </div>
                                     <div class="writing_time">
@@ -87,10 +89,13 @@
                                         </div>
                                         <div class="likey_report">
                                             <div class="likey">
-                                                좋아요
+                                                <a href="javascript:void(0)">좋아요</a>
                                             </div>
                                             <div class="report">
-                                                신고
+                                                <a href="javascript:void(0)">신고</a>
+                                            </div>
+                                            <div class="delete">
+                                                <a href="javascript:void(0)">삭제</a>
                                             </div>
                                         </div>
                                     </div>
