--- a/src/main/resources/static/html/reading/reading_qna.html
+++ b/src/main/resources/static/html/reading/reading_qna.html
@@ -42,7 +42,9 @@
                                                 익명
                                             </div>
                                             <div class="report">
-                                                신고
+                                                <a href="javascript:void(0)" class="inner_button">삭제</a>
+                                                <a href="javascript:void(0)" class="inner_button">수정</a>
+                                                <a href="javascript:void(0)" class="inner_button">신고</a>
                                             </div>
                                         </div>
                                         <div class="writing_time">
@@ -82,7 +84,9 @@
                                                 익명
                                             </div>
                                             <div class="report">
-                                                신고
+                                                <a href="javascript:void(0)" class="inner_button">삭제</a>
+                                                <a href="javascript:void(0)" class="inner_button">수정</a>
+                                                <a href="javascript:void(0)" class="inner_button">신고</a>
                                             </div>
                                         </div>
                                         <div class="writing_time">
