--- a/src/main/resources/static/html/reading/연락수단 제외 글읽기.html
+++ b/src/main/resources/static/html/reading/연락수단 제외 글읽기.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extend</title>
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/board_reading_market.css">
+    <link rel="stylesheet" href="/css/board_reading_market2.css">
     <link rel="stylesheet" href="/css/header.css">
     <!--Google Api-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +37,9 @@
                                             익명
                                         </div>
                                         <div class="report">
-                                            신고
+                                            <a href="javascript:void(0)" class="inner_button">삭제</a>
+                                            <a href="javascript:void(0)" class="inner_button">수정</a>
+                                            <a href="javascript:void(0)" class="inner_button">신고</a>
                                         </div>
                                     </div>
                                     <div class="writing_time">
@@ -80,10 +82,13 @@
                                         </div>
                                         <div class="likey_report">
                                             <div class="likey">
-                                                좋아요
+                                                <a href="javascript:void(0)">좋아요</a>
                                             </div>
                                             <div class="report">
-                                                신고
+                                                <a href="javascript:void(0)">신고</a>
+                                            </div>
+                                            <div class="delete">
+                                                <a href="javascript:void(0)">삭제</a>
                                             </div>
                                         </div>
                                     </div>
