--- a/src/main/resources/static/html/writing/write.html
+++ b/src/main/resources/static/html/writing/write.html
@@ -18,6 +18,7 @@
           rel="stylesheet">          
     <script defer src="/js/header.js"></script>
     <script defer src="/js/write.js"></script>
+    <script defer src="/js/referrer.js"></script>
 </head>
 <body>
 <!--여기에 헤더 삽입-->
@@ -30,7 +31,7 @@
                             <option value="free_board">자유게시판</option>
                             <option value="market_board">장터게시판</option>
                             <option value="qna_board">질문,답변 게시판</option>
-                            <option value="department_board">학과 공지사항</option>
+                            <option value="department_board" selected>학과 공지사항</option>
                         </select>
                     </div>
                     <div class="writing_title">
