댓글에 좋아요 수 표기 추가(reading_normal에만 해놨음) css도 board_reading_normal에만 있음

--- a/src/main/resources/static/html/reading/reading_normal.html
+++ b/src/main/resources/static/html/reading/reading_normal.html
@@ -94,7 +94,11 @@
                                     </div>
                                 </div>
                                 <div class="time">
-                                    3분 전
+                                    <div class="time_text">3분전</div>
+                                    <div class="comment_likey_count">
+                                        <span id="" class="material-icons-outlined" style="color:#b63826;">favorite_border</span>
+                                        <span class="recom_count">7&nbsp;</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
