- 이미지 업로드/다운로드 작업 완료

--- a/src/main/resources/static/html/reading/reading_qna.html
+++ b/src/main/resources/static/html/reading/reading_qna.html
@@ -138,7 +138,7 @@
                                     <input type="submit" class="writing_completion" value="글 작성">
                                 </div>
                             </div>
-                            <input id="image" class="image" type="file" accept="image/*" name="image"/>
+                            <input id="image" class="image" type="fileEntity" accept="image/*" name="image"/>
                         </form>
                         <div class="list_button"> 
                             <button type="button" class="list_button_inner" onclick="location.href='../board/qna_board.html'"><span class="material-icons">list</span>글 목록</button>
