--- a/src/main/resources/static/html/writing/연락수단 제외 글쓰기.html
+++ b/src/main/resources/static/html/writing/연락수단 제외 글쓰기.html
@@ -57,7 +57,7 @@
                             <input type="submit" class="writing_completion" value="글 작성">
                         </div>
                     </div>
-                    <input id="image" class="image" type="file" accept="image/*" name="image"/>
+                    <input id="image" class="image" type="fileEntity" accept="image/*" name="image"/>
                 </div>
             </form>
         </div>
