--- a/src/main/resources/static/html/reading/reading_normal.html
+++ b/src/main/resources/static/html/reading/reading_normal.html
@@ -18,7 +18,7 @@
           rel="stylesheet">          
     <script defer src="/js/calendar.js"></script>
     <script defer src="/js/header.js"></script>
-    <script defer src="/js/reading.js"></script>
+    <script defer src="/js/reading_normal.js"></script>
 </head>
 <body>
 <!--여기에 헤더 삽입-->
