옵션값 & 매핑수정

--- a/src/main/resources/static/html/writing/write.html
+++ b/src/main/resources/static/html/writing/write.html
@@ -28,10 +28,15 @@
                 <div class="writing_div">
                     <div class="board_name">
                         <select id="select_value" class="board_name_inner" onchange="ChangeValue()">
-                            <option value="free_board">자유게시판</option>
-                            <option value="market_board">장터게시판</option>
+                            <option value="tip_board">학과꿀팁</option>
+                            <option value="report_board">신문고</option>
                             <option value="qna_board">질문,답변 게시판</option>
-                            <option value="department_board" selected>학과 공지사항</option>
+                            <option value="market_board">장터게시판</option>
+                            <option value="free_board">자유게시판</option>
+                            <option value="fresh_board">새내기게시판</option>
+                            <option value="fossil_board">졸업생게시판</option>
+                            <option value="info_board">정보게시판</option>
+                            <option value="career_board">취업 및 진로게시판</option>
                         </select>
                     </div>
                     <div class="writing_title">
